--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
+    "remark-gfm": "^4.0.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
